[package]
name = "niconico"
version = "0.1.0"
authors = ["mkihr-ojisan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0.20"
reqwest = { version = "0.10.6", features = ["cookies"] }
tokio = { version = "0.2.21", features = ["macros"] }
html-extractor = "1.0.0"
serde = "1.0.114"
serde_json = "1.0.56"
futures = "0.3.5"
anyhow = "1.0.31"
chrono = "0.4.13"
